docs/_sass/minima/_layout.scss
/**
 * Site header
 */
.site-header {
  border-top: 5px solid $brand-color-dark;
  border-bottom: 1px solid $brand-color-light;
  min-height: $spacing-unit * 1.865;
  line-height: $base-line-height * $base-font-size * 2.25;

  // Positioning context for the mobile navigation icon
  position: relative;
}

.site-title {
  @include relative-font-size(1.625);
  font-weight: 300;
  letter-spacing: -1px;
  margin-bottom: 0;
  float: left;

  @include media-query($on-palm) {
    padding-right: 45px;
  }

  &,
  &:visited {
    color: $brand-color-dark;
  }
}

.site-nav {
  position: absolute;
  top: 9px;
  right: $spacing-unit / 2;
  background-color: $background-color;
  border: 1px solid $brand-color-light;
  border-radius: 5px;
  text-align: right;

  .nav-trigger {
      display: none;
  }

  .menu-icon {
    float: right;
    width: 36px;
    height: 26px;
    line-height: 0;
    padding-top: 10px;
    text-align: center;

    > svg path {
      fill: $brand-color-dark;
    }
  }

  label[for="nav-trigger"] {
    display: block;
    float: right;
    width: 36px;
    height: 36px;
    z-index: 2;
    cursor: pointer;
  }

  input ~ .trigger {
    clear: both;
    display: none;
  }

  input:checked ~ .trigger {
    display: block;
    padding-bottom: 5px;
  }

  .page-link {
    color: $text-color;
    line-height: $base-line-height;
    display: block;
    padding: 5px 10px;

    // Gaps between nav items, but not on the last one
    &:not(:last-child) {
      margin-right: 0;
    }
    margin-left: 20px;
  }

  @media screen and (min-width: $on-medium) {
    position: static;
    float: right;
    border: none;
    background-color: inherit;

    label[for="nav-trigger"] {
      display: none;
    }

    .menu-icon {
      display: none;
    }

    input ~ .trigger {
      display: block;
    }

    .page-link {
      display: inline;
      padding: 0;

      &:not(:last-child) {
        margin-right: 20px;
      }
      margin-left: auto;
    }
  }
}



/**
 * Page content
 */
.page-content {
  padding: $spacing-unit 0;
  flex: 1 0 auto;
}

@media screen and (min-width: $on-large) {
  /* Paper styling on larger screens */
  .page-content {
    background: #fafafa;

    & > .wrapper {
      padding-top: 48px;
      padding-bottom: 48px;
      background-color: white;
      box-shadow: $paper-box-shadow;
    }
  }

  .site-header {
    border-bottom: none;
    background-color: white;
    box-shadow: $paper-box-shadow;
  }
}

.page-heading {
  @include relative-font-size(2);
}

.post-list-heading {
  @include relative-font-size(1.75);
}

.post-list {
  margin-left: 0;
  list-style: none;

  > li {
    margin-bottom: $spacing-unit;
  }
}

.post-meta {
  font-size: $small-font-size;
  color: $brand-color;
}

.post-link {
  display: block;
  @include relative-font-size(1.5);
}



/**
 * Posts
 */
.post-header {
  margin-bottom: $spacing-unit;
}

.post-title,
.post-content h1 {
  @include relative-font-size(2.625);
  letter-spacing: -1px;
  line-height: 1.15;

  @media screen and (min-width: $on-large) {
    @include relative-font-size(2.625);
  }
}

.post-content {
  margin-bottom: $spacing-unit;

  h1, h2, h3 {
    margin-top: $spacing-unit * 2.25;
    margin-bottom: $spacing-unit * 0.5;
    font-weight: 600;
  }

  h4 {
    margin-top: $spacing-unit * 1.75;
    margin-bottom: $spacing-unit * 0.25;
    font-weight: 500;
  }

  h5 {
    margin-top: $spacing-unit * 1.25;
    margin-bottom: $spacing-unit * 0.2;
    font-weight: 500;
    font-style: italic;
  }

  h6 {
    margin-top: $spacing-unit * 1.2;
    margin-bottom: $spacing-unit * 0.1;
    font-weight: 700;
    font-style: italic;
  }

  h1, h2, h3, h4, h5, h6 {
    code {
      font-weight: 400;
    }
  }

  h2 {
    @include relative-font-size(1.75);

    @media screen and (min-width: $on-large) {
      @include relative-font-size(2);
    }
  }

  h3 {
    @include relative-font-size(1.375);

    @media screen and (min-width: $on-large) {
      @include relative-font-size(1.625);
    }
  }

  h4 {
    @include relative-font-size(1.25);
  }

  h5 {
    @include relative-font-size(1.125);
  }

  h6 {
    @include relative-font-size(1.0625);
  }
}


.social-media-list {
  display: table;
  margin: 0 auto;
  li {
    float: left;
    margin: 5px 10px 5px 0;
    &:last-of-type { margin-right: 0 }
    a {
      display: block;
      padding: $spacing-unit / 4;
      border: 1px solid $brand-color-light;
      &:hover { border-color: darken($brand-color-light, 10%) }
    }
  }
}



/**
 * Pagination navbar
 */
.pagination {
  margin-bottom: $spacing-unit;
  @extend .social-media-list;
  li {
    a, div {
      min-width: 41px;
      text-align: center;
      box-sizing: border-box;
    }
    div {
      display: block;
      padding: $spacing-unit / 4;
      border: 1px solid transparent;

      &.pager-edge {
        color: darken($brand-color-light, 5%);
        border: 1px dashed;
      }
    }
  }
}



/**
 * Grid helpers
 */
@media screen and (min-width: $on-large) {
  .one-half {
    width: calc(50% - (#{$spacing-unit} / 2));
  }
}


/**
 * Advanced print formatting
 */
@media print {
  @page {
    margin: 1.5cm;
  }

  body {
    zoom: $print-scale;
  }

  h2:not(:first-child), h3:not(:first-child):not(
    h2 + h3,
    h2 + p + h3,
    h2 + p + p + h3,
    h2 + p + p + p + h3,
    h2 + p + p + p + p + h3,
    h2 + p + p + p + p + p + h3,
    h2 + .h2-summary + h3
  ) {
    page-break-before: always;
  }

  h1, h2, h3, h4, h5, h6 {
    page-break-after: avoid;
  }

  img, code, .alert, .pill, .jobby-data-class {
    page-break-inside: avoid;
  }

  ul ul, ul ol, ol ul, ol ol {
    page-break-before: avoid;
    page-break-inside: avoid;
  }

  .reset-page-break-defaults, .h2-summary {
    &, & * {
      page-break-before: auto !important;
      page-break-inside: auto !important;
      page-break-after: auto !important;
    }
  }

  .page-break, .page-break-after {
    page-break-after: always !important;
  }

  .page-break-before {
    page-break-before: always !important;
  }



}

